2010-10-15 15:16  uratec

	* ChangeLog, bin/Makefile.am, mecab/src/libmecab.cpp: remove code
	  about DLL.

2010-10-15 14:38  uratec

	* ChangeLog, NEWS, README, configure.ac, bin/open_jtalk.c,
	  jpcommon/jpcommon.c, jpcommon/jpcommon.h,
	  jpcommon/jpcommon_label.c, jpcommon/jpcommon_node.c,
	  jpcommon/jpcommon_rule_euc_jp.h,
	  jpcommon/jpcommon_rule_shift_jis.h,
	  jpcommon/jpcommon_rule_utf_8.h, mecab/src/mecab.h,
	  mecab2njd/mecab2njd.c, mecab2njd/mecab2njd.h, njd/njd.c,
	  njd/njd.h, njd/njd_node.c, njd/njd_rule_euc_jp.h,
	  njd/njd_rule_shift_jis.h, njd/njd_rule_utf_8.h,
	  njd2jpcommon/njd2jpcommon.c, njd2jpcommon/njd2jpcommon.h,
	  njd2jpcommon/njd2jpcommon_rule_euc_jp.h,
	  njd2jpcommon/njd2jpcommon_rule_shift_jis.h,
	  njd2jpcommon/njd2jpcommon_rule_utf_8.h,
	  njd_set_accent_phrase/njd_set_accent_phrase.c,
	  njd_set_accent_phrase/njd_set_accent_phrase.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_euc_jp.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_shift_jis.h,
	  njd_set_accent_phrase/njd_set_accent_phrase_rule_utf_8.h,
	  njd_set_accent_type/njd_set_accent_type.c,
	  njd_set_accent_type/njd_set_accent_type.h,
	  njd_set_accent_type/njd_set_accent_type_rule_euc_jp.h,
	  njd_set_accent_type/njd_set_accent_type_rule_shift_jis.h,
	  njd_set_accent_type/njd_set_accent_type_rule_utf_8.h,
	  njd_set_digit/njd_set_digit.c, njd_set_digit/njd_set_digit.h,
	  njd_set_digit/njd_set_digit_rule_euc_jp.h,
	  njd_set_digit/njd_set_digit_rule_shift_jis.h,
	  njd_set_digit/njd_set_digit_rule_utf_8.h,
	  njd_set_long_vowel/njd_set_long_vowel.c,
	  njd_set_long_vowel/njd_set_long_vowel.h,
	  njd_set_long_vowel/njd_set_long_vowel_rule_euc_jp.h,
	  njd_set_long_vowel/njd_set_long_vowel_rule_shift_jis.h,
	  njd_set_long_vowel/njd_set_long_vowel_rule_utf_8.h,
	  njd_set_pronunciation/njd_set_pronunciation.c,
	  njd_set_pronunciation/njd_set_pronunciation.h,
	  njd_set_pronunciation/njd_set_pronunciation_rule_euc_jp.h,